--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-masonry-css": "^1.0.16",
     "react-starfield": "^1.0.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
